add: presto dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ repositories {
 }
 
 dependencies {
+
+    // Source: https://mvnrepository.com/artifact/com.facebook.presto/presto-jdbc
+    implementation 'com.facebook.presto:presto-jdbc:0.296'
+
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     compileOnly 'org.projectlombok:lombok'
