add: presto application.yml & config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: PrestoTest
+
+  datasource:
+    # PrestoDB 서버 주소 및 기본 카탈로그 설정
+    url: jdbc:presto://localhost:8080/mysql/default
+    driver-class-name: com.facebook.presto.jdbc.PrestoDriver
+    username: ms
