--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,3 +17,6 @@ spring:
 mybatis:
   config-location: classpath:mybatis-config.xml
   mapper-locations: classpath:mapper/**/*.xml
+
+server:
+  port: 30012
